kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-service
spec:
  selector:
    app: spring-app
  ports:
    - protocol: TCP
      port: 8080
      name: http
      targetPort: 8080
  type: ClusterIP
